[IMP] Project : Add Graph near Task and Issue,rename tab of form,focus + sign when empty kanban view,invisible remaining time when no managing time,don't shoe project name in bow if coming from a project,review default stage and change default group by

--- a/addons/project/static/src/css/project.css
+++ b/addons/project/static/src/css/project.css
@@ -62,4 +62,17 @@
     -box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
 }
 
+.openerp .oe_kanban_view .oe_kanban_project_task_spark {
+  /* Customize width and height of kanban according bootstrap3 */
+  width: 260px;
+  min-height: 120px;
+  /* End of customize */
+  cursor: default;
+}
+
+.openerp .oe_kanban_view .oe_sparkline_bar {
+    height: 20px;
+    width: 30px;
+    display: inline;
+}
 
